# compose

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
pycomposer/: __init__.py  chord.py  frequency_resolver.py  misc.py  note.py  scale.py  scale_index.py  to_spec.py  util.py
pycomposer/tests/: __init__.py  test_note.py  test_scale.py  test_util.py
resources/: chords.yaml  scales.yaml
resources/example_compositions/: chords.yaml  keyboard-showcase.yaml  showcase.yaml
src/: frequency_resolver.rs  main.rs
src/lib/: consts.rs  error.rs  errors.rs  fourier.rs  lib.rs  pycomposer.rs  sample_bucketer.rs
src/lib/core/: chord.rs  composer.rs  composition.rs  composition_state.rs  consts.rs  input.rs  mod.rs  note.rs  output.rs  playable.rs  player.rs  regex.rs  reload_composition.rs  reload_player.rs  scale.rs  scale_index.rs  state.rs  time.rs  tree.rs
src/lib/core/spec/: from_spec.rs  (+8 more)
src/lib/gui/: drawable.rs  mod.rs  window_event.rs  window_listener.rs
src/lib/inputs/: bool_to_bounded.rs  bounded_to_bool.rs  buffer.rs  constant.rs  converters.rs  function.rs  input_mod.rs  key.rs  mod.rs  random.rs  smooth_bool.rs  timeline.rs  timeline_multi.rs  wave.rs
src/lib/macros/: chord.rs  map.rs  mod.rs  scale.rs  timeline_multi.rs
src/lib/outputs/: mod.rs  speaker.rs
src/lib/players/: combiner.rs  empty.rs  fourier_drawer.rs  keyboard.rs  linear.rs  mod.rs  one_off.rs  play_input.rs  sample.rs  smooth_toggle.rs  speed.rs  toggle.rs  volume.rs  wave.rs  wave_drawer.rs
src/lib/spec/: creation.rs  mod.rs  spec_macro.rs  yaml.rs
src/python/: generate.rs
(+9 files in other folders)
