[package]
name = "composer"
version = "0.1.0"
authors = ["Misha Wagner <mishajw@gmail.com>"]

[lib]
name = "composer"
path = "src/lib/lib.rs"

[[bin]]
name = "composer"
path = "src/main.rs"

[[bin]]
name = "freq-resolver"
path = "src/frequency_resolver.rs"

[dependencies]
error-chain = "*"
yaml-rust = "*"
portaudio = "*"
log = "*"
env_logger = "*"
clap = "*"
hound = "*"
regex = "*"
lazy_static = "*"
sfml = "*"
num = "*"
rustfft = "*"
rand = "*"
